--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
         "sourceMap": true, //Nos genera los mapas
         "esModuleInterop": true, //Nos permite importar librerias en commonjs
         "declaration": true, //Nos genera los archivos de definicion
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "include": ["src/**/*.ts"]
 }
