--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
         "outDir": "./dist", //Se guarda cuando compilamos
         "rootDir": "./src", //Este es el directorio raiz
         "lib": ["ESNext"], //El tipo de compilado
+        "target": "esnext",
+        "moduleResolution": "nodenext",
+        "module": "nodenext",
         "strict": false, //Nos permite no ser tan estrict con los any o tipado
         "sourceMap": true, //Nos genera los mapas
         "esModuleInterop": true, //Nos permite importar librerias en commonjs
